test/types/string/sungeun/c_string/multilocale/c_str_on_remote_global_string.good
c_str_on_remote_global_string.chpl:4: error: halt reached - Cannot call '.c_str()' on a remote string
