test/types/string/sungeun/c_string/multilocale/c_str_on_remote_global_string.chpl
use CTypes;
var s = "0123456789";
on Locales[numLocales-1] {
  writeln(string.createCopyingBuffer(s.c_str()));
}
